--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: aerifer website
 baseurl: ""
 permalink: /:title/
 
-theme: jekyll-theme-tactile
+theme: jekyll-theme-slate
 
 exclude:
   - Gemfile
